// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`post renders with post 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "flex-start",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderRadius": 0,
              "borderWidth": 0,
              "height": 60,
              "justifyContent": "center",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            }
          }
          testID="BackButton"
        >
          <SvgMock
            color="#B4B6BA"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text>
          Completed Step
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": undefined,
      }
    }
    contentInset={
      Object {
        "bottom": 32,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "paddingHorizontal": 32,
              "paddingTop": 13,
            },
          ]
        }
      >
        <SvgMock
          color="#B4B6BA"
          height={24}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1,
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#B4B6BA",
                "paddingLeft": 4,
              },
              undefined,
            ]
          }
        >
          STEP OF FAITH
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 32,
            "fontStyle": "normal",
            "fontWeight": "300",
            "lineHeight": 38,
            "marginHorizontal": 32,
            "marginVertical": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Repellat quisquam recusandae alias consequuntur corporis.
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "#ECEEF2",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 16,
            "paddingVertical": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 24,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Completed Tuesday, January 19 2010
        </Text>
        <Image
          source={
            Object {
              "testUri": "../../../assets/images/checkIcon-grey.png",
            }
          }
          style={
            Object {
              "height": 24,
              "margin": 10,
              "width": 24,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 26,
          }
        }
      >
        <View
          style={Object {}}
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "flex-start",
                "marginBottom": 10,
                "marginTop": 10,
                "marginVertical": 10,
                "width": "100%",
              }
            }
          >
            <Text
              style={Object {}}
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                      "fontFamily": "SourceSansPro-Regular",
                      "fontSize": 16,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 24,
                      "textAlignVertical": "center",
                      "textTransform": "none",
                    },
                    Object {},
                  ]
                }
              >
                ut sunt qui
              </Text>
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 26,
          }
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "flexDirection": "row",
              },
            ]
          }
        >
          <Image
            resizeMode="cover"
            source={
              Object {
                "uri": "ut nulla quam",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 24,
                  "height": 48,
                  "width": 48,
                },
                Object {
                  "backgroundColor": "rgb(161, 155, 115)",
                },
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "marginLeft": 10,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#505256",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 16,
                  "fontStyle": "normal",
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "lineHeight": 20,
                  "textAlignVertical": "center",
                  "textTransform": "uppercase",
                }
              }
            >
              Gracie Weber
            </Text>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#B4B6BA",
                      "fontFamily": "SourceSansPro-Regular",
                      "fontSize": 12,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 16,
                      "textAlignVertical": "center",
                      "textTransform": "none",
                    },
                    Object {},
                  ]
                }
                testID="Text"
              >
                September 11, 2014 @ 9:20 AM
              </Text>
              <Text
                onPress={[Function]}
                style={
                  Object {
                    "color": "#3CC8E6",
                    "fontSize": 12,
                    "paddingLeft": 10,
                  }
                }
                testID="openPostButton"
              >
                Open Post
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "paddingTop": 10,
              },
              Object {},
            ]
          }
        >
          <View
            style={
              Object {
                "paddingBottom": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "justifyContent": "flex-start",
                  "marginBottom": 10,
                  "marginTop": 10,
                  "marginVertical": 10,
                  "width": "100%",
                }
              }
            >
              <Text
                style={Object {}}
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                        "fontFamily": "SourceSansPro-Regular",
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                        "lineHeight": 24,
                        "textAlignVertical": "center",
                        "textTransform": "none",
                      },
                      Object {},
                    ]
                  }
                >
                  debitis incidunt accusantium
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {},
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "uri": "libero repudiandae esse",
            }
          }
          style={
            Object {
              "aspectRatio": 2,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`post renders without post 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "flex-start",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderRadius": 0,
              "borderWidth": 0,
              "height": 60,
              "justifyContent": "center",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            }
          }
          testID="BackButton"
        >
          <SvgMock
            color="#B4B6BA"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text>
          Completed Step
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": undefined,
      }
    }
    contentInset={
      Object {
        "bottom": 32,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "paddingHorizontal": 32,
              "paddingTop": 13,
            },
          ]
        }
      >
        <SvgMock
          color="#B4B6BA"
          height={24}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1,
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#B4B6BA",
                "paddingLeft": 4,
              },
              undefined,
            ]
          }
        >
          STEP OF FAITH
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 32,
            "fontStyle": "normal",
            "fontWeight": "300",
            "lineHeight": 38,
            "marginHorizontal": 32,
            "marginVertical": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        esse repellat quisquam
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "#ECEEF2",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 16,
            "paddingVertical": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 24,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Completed Sunday, September 19 2010
        </Text>
        <Image
          source={
            Object {
              "testUri": "../../../assets/images/checkIcon-grey.png",
            }
          }
          style={
            Object {
              "height": 24,
              "margin": 10,
              "width": 24,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 26,
          }
        }
      >
        <View
          style={Object {}}
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "flex-start",
                "marginBottom": 10,
                "marginTop": 10,
                "marginVertical": 10,
                "width": "100%",
              }
            }
          >
            <Text
              style={Object {}}
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                      "fontFamily": "SourceSansPro-Regular",
                      "fontSize": 16,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 24,
                      "textAlignVertical": "center",
                      "textTransform": "none",
                    },
                    Object {},
                  ]
                }
              >
                consequuntur corporis repellat
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`renders loading state correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "flex-start",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderRadius": 0,
              "borderWidth": 0,
              "height": 60,
              "justifyContent": "center",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            }
          }
          testID="BackButton"
        >
          <SvgMock
            color="#B4B6BA"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text>
          Completed Step
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 13,
          },
        ]
      }
    >
      <SvgMock
        color="#B4B6BA"
        height={24}
      />
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1,
              "lineHeight": 20,
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Object {
              "color": "#B4B6BA",
              "paddingLeft": 4,
            },
            undefined,
          ]
        }
      >
        STEP OF FAITH
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Light",
          "fontSize": 32,
          "fontStyle": "normal",
          "fontWeight": "300",
          "lineHeight": 38,
          "marginHorizontal": 32,
          "marginVertical": 16,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "#ECEEF2",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 24,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      />
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/checkIcon-grey.png",
          }
        }
        style={
          Object {
            "height": 24,
            "margin": 10,
            "width": 24,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 32,
          "paddingTop": 26,
        }
      }
    />
  </View>
</View>
`;

exports[`with challenge suggestion renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "flex-start",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderRadius": 0,
              "borderWidth": 0,
              "height": 60,
              "justifyContent": "center",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            }
          }
          testID="BackButton"
        >
          <SvgMock
            color="#B4B6BA"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text>
          Completed Step
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": undefined,
      }
    }
    contentInset={
      Object {
        "bottom": 32,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "paddingHorizontal": 32,
              "paddingTop": 13,
            },
          ]
        }
      >
        <SvgMock
          color="#B4B6BA"
          height={24}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1,
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#B4B6BA",
                "paddingLeft": 4,
              },
              undefined,
            ]
          }
        >
          STEP OF FAITH
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 32,
            "fontStyle": "normal",
            "fontWeight": "300",
            "lineHeight": 38,
            "marginHorizontal": 32,
            "marginVertical": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        esse repellat quisquam
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "#ECEEF2",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 16,
            "paddingVertical": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 24,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Completed Sunday, September 19 2010
        </Text>
        <Image
          source={
            Object {
              "testUri": "../../../assets/images/checkIcon-grey.png",
            }
          }
          style={
            Object {
              "height": 24,
              "margin": 10,
              "width": 24,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 26,
          }
        }
      >
        <View
          style={Object {}}
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "flex-start",
                "marginBottom": 10,
                "marginTop": 10,
                "marginVertical": 10,
                "width": "100%",
              }
            }
          >
            <Text
              style={Object {}}
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                      "fontFamily": "SourceSansPro-Regular",
                      "fontSize": 16,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 24,
                      "textAlignVertical": "center",
                      "textTransform": "none",
                    },
                    Object {},
                  ]
                }
              >
                consequuntur corporis repellat
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`without challenge suggestion renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "flex-start",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderRadius": 0,
              "borderWidth": 0,
              "height": 60,
              "justifyContent": "center",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            }
          }
          testID="BackButton"
        >
          <SvgMock
            color="#B4B6BA"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text>
          Completed Step
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": undefined,
      }
    }
    contentInset={
      Object {
        "bottom": 32,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "paddingHorizontal": 32,
              "paddingTop": 13,
            },
          ]
        }
      >
        <SvgMock
          color="#B4B6BA"
          height={24}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1,
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#B4B6BA",
                "paddingLeft": 4,
              },
              undefined,
            ]
          }
        >
          STEP OF FAITH
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 32,
            "fontStyle": "normal",
            "fontWeight": "300",
            "lineHeight": 38,
            "marginHorizontal": 32,
            "marginVertical": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        esse repellat quisquam
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "#ECEEF2",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 16,
            "paddingVertical": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 24,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Completed Sunday, September 19 2010
        </Text>
        <Image
          source={
            Object {
              "testUri": "../../../assets/images/checkIcon-grey.png",
            }
          }
          style={
            Object {
              "height": 24,
              "margin": 10,
              "width": 24,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 26,
          }
        }
      >
        <View
          style={Object {}}
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "flex-start",
                "marginBottom": 10,
                "marginTop": 10,
                "marginVertical": 10,
                "width": "100%",
              }
            }
          >
            <Text
              style={Object {}}
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                      "fontFamily": "SourceSansPro-Regular",
                      "fontSize": 16,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 24,
                      "textAlignVertical": "center",
                      "textTransform": "none",
                    },
                    Object {},
                  ]
                }
              >
                consequuntur corporis repellat
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
